--- a/common/locales/en/subscriber.json
+++ b/common/locales/en/subscriber.json
@@ -54,8 +54,16 @@
     "checkout": "Checkout",
     "sureCancelSub": "Are you sure you want to cancel your subscription?",
     "subCanceled": "Subscription will become inactive on",
+    "buyGemsGoldTitle": "To Buy Gems with Gold",
+    "becomeSubscriber": "Become a Subscriber",
     "subGemPop": "Because you subscribe to Habitica, you can purchase a number of Gems each month using Gold. You can see how many Gems are available to buy at the corner of the Gem icon.",
     "subGemName": "Subscriber Gems",
+    "freeGemsTitle": "Obtain Gems for Free",
+    "maxBuyGems": "You have bought all the gems you can this month. Thanks for subscribing!",
+    "buyGemsAllow1": "You can buy",
+    "buyGemsAllow2": "more gems this month",
+    "purchaseGemsSeparately": "Purchase Gems Separately",
+    "subFreeGemsHow": "Habitica players can earn gems for free by winning <a href=\"/#/options/groups/challenges\">challenges</a> that award gems as a prize, or as a <a href=\"http://habitica.wikia.com/wiki/Contributing_to_Habitica\">contributor reward by helping the development of Habitica.</a>",
     "timeTravelers": "Time Travelers",
     "timeTravelersTitleNoSub": "<%= linkStartTyler %>Tyler<%= linkEnd %> and <%= linkStartVicky %>Vicky<%= linkEnd %>",
     "timeTravelersTitle": "Mysterious Time Travelers",
