--- a/common/locales/en/subscriber.json
+++ b/common/locales/en/subscriber.json
@@ -28,6 +28,7 @@
     "subscribed": "Subscribed",
     "manageSub": "Click to manage subscription",
     "cancelSub": "Cancel Subscription",
+    "canceledSubscription": "Canceled Subscription",
     "adminSub": "Administrator Subscriptions",
     "morePlans": "More Plans<br/>Coming Soon",
     "organizationSub": "Private Organization",
