--- a/common/locales/en/api-v3.json
+++ b/common/locales/en/api-v3.json
@@ -27,5 +27,7 @@
   "positionRequired": "\"position\" is required and must be a number.",
   "cantMoveCompletedTodo": "Can't move a completed todo.",
   "directionUpDown": "\"direction\" is required and must be 'up' or 'down'",
-  "alreadyTagged": "The task is already tagged with given tag."
+  "alreadyTagged": "The task is already tagged with given tag.",
+  "groupIdRequired": "\"groupId\" must be a valid UUID",
+  "groupNotFound": "Group not found."
 }
